Fix missing whitespace issue for main content

--- a/src/App.css
+++ b/src/App.css
@@ -198,6 +198,7 @@ a:hover {
 .main-content {
   min-height: 100%;
   position: relative;
+  height: 800px;
 }
 
 .main-content .container {
